# ncs-esb-ble-mpsl-demo

./: .gitignore  CMakeLists.txt  README.md  README.rst  prj.conf  sample.yaml  test_notes.txt
app_netcore/: CMakeLists.txt  prj.conf
app_netcore/src/: main.c
common/: app_bt_lbs.c  app_esb.c  app_esb.h  app_timeslot.c  app_timeslot.h  esb_rpc_ids.h  hci_rpmsg_module.h  timeslot_handler.c  timeslot_handler.h
common/53_app/: app_esb_53_app.c  radio_regs.h
common/53_net/: Kconfig  app_esb_53_net.c  hci_rpmsg_module.c
prx/: CMakeLists.txt  prj.conf
prx/boards/: nrf52833dk_nrf52833.overlay  nrf52840dk_nrf52840.overlay  nrf52dk_nrf52832.conf  nrf5340dk_nrf5340_cpuapp.conf  nrf5340dk_nrf5340_cpunet.conf
prx/src/: main.c
ptx/: CMakeLists.txt  prj.conf
ptx/boards/: nrf52dk_nrf52832.conf  nrf5340dk_nrf5340_cpuapp.conf  nrf5340dk_nrf5340_cpunet.conf
ptx/src/: hci_rpmsg_module.c  hci_rpmsg_module.h  main.c
src/: app_bt_lbs.c  app_bt_lbs.h  app_esb.c  app_timeslot.c  app_timeslot.h  main.c
